--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('./images/moon6.png');
+  background-image: url('./images/Moon6.png');
 }
 
 .hero p {
