--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,8 @@ body {
   justify-content: center;
   align-items: center;
   background-image: url('./images/Moon6.png');
-  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero p {
